# aura-guard

./: CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  LIVE_AB_EXAMPLE.md  QUICKSTART.md
examples/: README.md  live_test.py  mcp_guarded_server.py  natural_loop_with_guard.py  natural_loop_without_guard.py  ollama_agent_loop.py  openai_agent_example.py  real_agent_test.py  run_with_guard.py  run_without_guard.py  triage_simulation.py
src/aura_guard/: __init__.py  async_middleware.py  cli.py  config.py  guard.py  middleware.py  serialization.py  telemetry.py  types.py
src/aura_guard/adapters/: __init__.py  langchain_adapter.py  mcp_adapter.py  openai_adapter.py
src/aura_guard/bench/: runner.py
src/aura_guard/bench/scenarios/: scenarios.json
standalone/: README.md  aura_guard_standalone.py
tests/: run_tests.py  test_guard.py
