[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-guard"
version = "0.3.1"
description = "Cost governance for AI agents. Stop tool-call loops, prevent double side-effects, enforce spending caps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Aura Guard Contributors" }
]
keywords = ["llm", "agents", "safety", "cost", "governance", "loops", "guardrails", "tools"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
]

dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
aura-guard = "aura_guard.cli:main"

[project.urls]
Homepage = "https://github.com/auraguarddev-debug/aura-guard"
Documentation = "https://github.com/auraguarddev-debug/aura-guard/tree/main/docs"
Issues = "https://github.com/auraguarddev-debug/aura-guard/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aura_guard.bench" = ["scenarios/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
