[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura-guard"
version = "0.3.6"
description = "At-most-once side-effect enforcement + circuit breaker for agent tool calls (loops, retries, duplicate side effects)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Aura Guard Contributors" }
]
keywords = ["agents", "agent-runtime", "idempotency", "at-most-once", "circuit-breaker", "reliability", "tool-calling", "tool-execution", "retry", "dedupe"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
]

dependencies = []

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
aura-guard = "aura_guard.cli:main"

[project.urls]
Homepage = "https://github.com/auraguardhq/aura-guard"
Documentation = "https://github.com/auraguardhq/aura-guard/tree/main/docs"
Issues = "https://github.com/auraguardhq/aura-guard/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aura_guard" = ["py.typed"]
"aura_guard.bench" = ["scenarios/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ""
